Login properties eklendi. Türkçe karakter sorunu çözülecek

--- a/properties/testData.properties
+++ b/properties/testData.properties
@@ -1,2 +1,22 @@
-phone="05349199918"
-BROWSER = CHROME
+#Kullanýcý Bilgileri:
+phoneNumber=05349199918
+password= qwerty1
+wrongPassword=testhi54lal34
+wrongMinPhoneNumber=0919999999
+wrongMaxPhoneNumber=091999999999
+wrongWithoutZeroPhoneNumber=919999999999
+wrongMinPassword=testhi
+wrongMaxPassword=testhilaltesthilaltesthilal
+
+#Hata Mesajlarý
+textErrorWrongInformation=Telefon numarasý veya þifre hatalý.
+textErrorEmptyInput=Bu alanýn doldurulmasý zorunludur.
+textErrorInvalidPhone=Lütfen geçerli bir telefon numarasý giriniz. Telefon numarasý baþýna 0 olacak þekilde 11 haneli olmalýdýr.
+textErrorInvalidPassword=Þifre maksimum 20 minimum 6 karakter içermelidir ve en az bir harf ve bir sayý içermelidir.
+
+
+#Browser Type
+BROWSER = chrome
+
+#Links
+mainPage=https://test.iddaa.com/
