Login properties düzenlendi. Türkçe karakter sorunu çözüldü.

--- a/properties/testData.properties
+++ b/properties/testData.properties
@@ -8,11 +8,12 @@ wrongWithoutZeroPhoneNumber=919999999999
 wrongMinPassword=testhi
 wrongMaxPassword=testhilaltesthilaltesthilal
 
-#Hata Mesajlarý
-textErrorWrongInformation=Telefon numarasý veya þifre hatalý.
-textErrorEmptyInput=Bu alanýn doldurulmasý zorunludur.
-textErrorInvalidPhone=Lütfen geçerli bir telefon numarasý giriniz. Telefon numarasý baþýna 0 olacak þekilde 11 haneli olmalýdýr.
-textErrorInvalidPassword=Þifre maksimum 20 minimum 6 karakter içermelidir ve en az bir harf ve bir sayý içermelidir.
+#Hata Mesajlarý(NOT: \u015E--> Þ camelcase,\u015F--> lowercase, \u0131-->ý lowercase )
+#Login sayfasý uyarýlarý
+textErrorWrongInformation=Telefon numaras\u0131 veya \u015Fifre hatal\u0131.
+textErrorEmptyInput=Bu alan\u0131n doldurulmas\u0131 zorunludur.
+textErrorInvalidPhone=Lütfen geçerli bir telefon numaras\u0131 giriniz. Telefon numaras\u0131 ba\u015F\u0131na 0 olacak \u015Fekilde 11 haneli olmal\u0131d\u0131r.
+textErrorInvalidPassword=\u015Eifre maksimum 20 minimum 6 karakter içermelidir ve en az bir harf ve bir say\u0131 içermelidir.
 
 
 #Browser Type
@@ -20,3 +21,4 @@ BROWSER = chrome
 
 #Links
 mainPage=https://test.iddaa.com/
+loginPage=https://test.iddaa.com/giris-yap
