--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>11.0.6</java.version>
         <testng.version>7.1.0</testng.version>
-        <selenium.version>3.141.59</selenium.version>
+        <selenium.version>4.0.0-alpha-6</selenium.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
+        </dependency>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
