--- a/src/test/java/utils/properties/testData.properties
+++ b/src/test/java/utils/properties/testData.properties
@@ -7,7 +7,7 @@
 # \u00F6 --> ö lowercase , \u00D6 --> Ö capital
 
 #Kullanýcý Bilgileri:
-phoneNumber=05349199918
+phoneNumber=
 password= qwerty1
 wrongPassword=testhilal34
 wrongMinPhoneNumber=0919999999
@@ -17,8 +17,8 @@ wrongMinPassword=testhi
 wrongMaxPassword=testhilaltesthilaltesthilal
 truePersonName=Nur Hilal
 truePersonSurname=Kaya
-truePersonMail=testhilaltestmbsm@gmail.com
-wrongPhoneNumber=5399199999
+truePersonMail=
+wrongPhoneNumber=
 wrongPersonMail=testhýlal@gmail.com
 invalidPersonMail=testhilaltest@gmail.c
 invalidPersonName=hilal@
@@ -27,7 +27,7 @@ maxPersonName=NurHilalnurhilalnurhilalnurhila
 maxPersonSurname=Karakarakarakarakarakarakarakark
 minPersonName=N
 minPersonSurname=K
-newPassword=testhilaltest34
+newPassword=te
 wrongPasswordJustNumber=789456
 wrongNewPasswordJustNumber=123456
 wrongPasswordJustLetter=hilalt
@@ -84,7 +84,7 @@ textDefaultConfirmNewPassword=Yeni \u015Eifre (Tekrar)
 #Profil Sayfasý Kullanýcý Bilgileri
 textPersonName=Hilal
 textPersonSurname=Yýlmaz
-textPersonMail=testhilaltest@gmail.com
+textPersonMail=
 textPersonDealerNumber=110319
 textPersonDealerName=MEHMET MANGIR
 textPersonDealerAddress=HAN MAH. NURÝ EROÐLU SOK. NO:3/A 10050 SUSURLUK / BALIKESÝR
